NOJIRA Fix issue in A-Z page where bullets were visible in IE

--- a/assets/source/sass/layout/_a-z-listing.scss
+++ b/assets/source/sass/layout/_a-z-listing.scss
@@ -5,6 +5,8 @@
 .az-links {
     li:before {
 	content: unset !important;
+	content: none !important;
+
     }
 }
 
